@@ -3,6 +3,7 @@ package team.themoment.hellogsmv3.domain.oneseo.service;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.BDDMockito.given;
+import static org.mockito.BDDMockito.willThrow;
 import static org.mockito.Mockito.*;
 import static team.themoment.hellogsmv3.domain.oneseo.entity.type.GraduationType.CANDIDATE;
 import static team.themoment.hellogsmv3.domain.oneseo.entity.type.Major.*;
@@ -17,11 +18,12 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.*;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpStatus;
 
 import team.themoment.hellogsmv3.domain.member.entity.Member;
-import team.themoment.hellogsmv3.domain.member.service.MemberService;
 import team.themoment.hellogsmv3.domain.oneseo.dto.request.MiddleSchoolAchievementReqDto;
 import team.themoment.hellogsmv3.domain.oneseo.dto.request.OneseoReqDto;
 import team.themoment.hellogsmv3.domain.oneseo.dto.response.CalculatedScoreResDto;
@@ -36,10 +38,11 @@ import team.themoment.hellogsmv3.domain.oneseo.repository.MiddleSchoolAchievemen
 import team.themoment.hellogsmv3.domain.oneseo.repository.OneseoPrivacyDetailRepository;
 import team.themoment.hellogsmv3.domain.oneseo.repository.OneseoRepository;
 import team.themoment.hellogsmv3.domain.oneseo.repository.ScreeningChangeHistoryRepository;
-import team.themoment.hellogsmv3.global.exception.error.ExpectedException;
 import team.themoment.hellogsmv3.global.thirdParty.feign.client.dto.request.LambdaScoreCalculatorReqDto;
 import team.themoment.hellogsmv3.global.thirdParty.feign.client.lambda.LambdaScoreCalculatorClient;
+import team.themoment.sdk.exception.ExpectedException;
 
+@ExtendWith(MockitoExtension.class)
 @DisplayName("ModifyOneseoService 클래스의")
 class ModifyOneseoServiceTest {
 
@@ -58,17 +61,10 @@ class ModifyOneseoServiceTest {
     @Mock
     private OneseoService oneseoService;
     @Mock
-    private MemberService memberService;
-    @Mock
     private LambdaScoreCalculatorClient lambdaScoreCalculatorClient;
 
     @InjectMocks
     private ModifyOneseoService modifyOneseoService;
-
-    @BeforeEach
-    void setUp() {
-        MockitoAnnotations.openMocks(this);
-    }
 
     @Nested
     @DisplayName("execute 메서드는")
@@ -78,7 +74,7 @@ class ModifyOneseoServiceTest {
 
         List<Integer> achievement = Arrays.asList(5, 5, 5, 5, 5, 5, 5, 5, 5);
         List<String> generalSubjects = Arrays.asList("국어", "도덕", "사회", "역사", "수학", "과학", "기술가정", "영어");
-        List<String> newSubjects = Arrays.asList("프로그래밍");
+        List<String> newSubjects = List.of("프로그래밍");
         List<Integer> artsPhysicalAchievement = Arrays.asList(5, 5, 5, 5, 5, 5, 5, 5, 5);
         List<String> artsPhysicalSubjects = Arrays.asList("체육", "미술", "음악");
         List<Integer> absentDays = Arrays.asList(0, 0, 0);
@@ -114,10 +110,24 @@ class ModifyOneseoServiceTest {
         DesiredMajors desiredMajors = DesiredMajors.builder().firstDesiredMajor(firstDesiredMajor)
                 .secondDesiredMajor(secondDesiredMajor).thirdDesiredMajor(thirdDesiredMajor).build();
 
-        OneseoReqDto oneseoReqDto = new OneseoReqDto(guardianName, guardianPhoneNumber, relationshipWithGuardian,
-                profileImg, address, detailAddress, graduationType, schoolTeacherName, schoolTeacherPhoneNumber,
-                firstDesiredMajor, secondDesiredMajor, thirdDesiredMajor, middleSchoolAchievementReqDto, schoolName,
-                schoolAddress, screening, graduationDate, studentNumber);
+        OneseoReqDto oneseoReqDto = new OneseoReqDto(guardianName,
+                guardianPhoneNumber,
+                relationshipWithGuardian,
+                profileImg,
+                address,
+                detailAddress,
+                graduationType,
+                schoolTeacherName,
+                schoolTeacherPhoneNumber,
+                firstDesiredMajor,
+                secondDesiredMajor,
+                thirdDesiredMajor,
+                middleSchoolAchievementReqDto,
+                schoolName,
+                schoolAddress,
+                screening,
+                graduationDate,
+                studentNumber);
 
         @Nested
         @DisplayName("유효한 회원 ID와 요청 데이터가 주어지면")
@@ -206,10 +216,9 @@ class ModifyOneseoServiceTest {
             }
 
             @Test
-            @DisplayName("전형이 변경되었다면 히스토리를 남긴다.")
+            @DisplayName("전형이 변경되었다면 히스토리를 남긴다")
             void it_change_screening_entity_save() {
                 Screening beforeScreening = SPECIAL;
-                Screening afterScreening = GENERAL;
                 Member existingMember = mock(Member.class);
                 Oneseo oneseo = Oneseo.builder().id(1L).member(existingMember).wantedScreening(beforeScreening)
                         .desiredMajors(desiredMajors)
@@ -238,7 +247,7 @@ class ModifyOneseoServiceTest {
                         .getValue();
 
                 assertEquals(beforeScreening, capturedScreeningChangeHistory.getBeforeScreening());
-                assertEquals(afterScreening, capturedScreeningChangeHistory.getAfterScreening());
+                assertEquals(GENERAL, capturedScreeningChangeHistory.getAfterScreening());
             }
         }
 
@@ -248,8 +257,9 @@ class ModifyOneseoServiceTest {
 
             @BeforeEach
             void setUp() {
-                doThrow(new ExpectedException("해당 지원자의 원서를 찾을 수 없습니다. member ID: " + memberId, HttpStatus.BAD_REQUEST))
-                        .when(oneseoService).findWithMemberByMemberIdOrThrow(memberId);
+                willThrow(
+                        new ExpectedException("해당 지원자의 원서를 찾을 수 없습니다. member ID: " + memberId, HttpStatus.BAD_REQUEST))
+                        .given(oneseoService).findWithMemberByMemberIdOrThrow(memberId);
             }
 
             @Test
@@ -268,8 +278,9 @@ class ModifyOneseoServiceTest {
 
             @BeforeEach
             void setUp() {
-                doThrow(new ExpectedException("해당 지원자의 원서를 찾을 수 없습니다. member ID: " + memberId, HttpStatus.BAD_REQUEST))
-                        .when(oneseoService).findWithMemberByMemberIdOrThrow(memberId);
+                willThrow(
+                        new ExpectedException("해당 지원자의 원서를 찾을 수 없습니다. member ID: " + memberId, HttpStatus.BAD_REQUEST))
+                        .given(oneseoService).findWithMemberByMemberIdOrThrow(memberId);
             }
 
             @Test
